sass/app.scss
@import "colors";
@import "fonts";
@import "scrollbar";

/*------------------------------

    Animations

------------------------------*/

@-webkit-keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}

/*------------------------------

    Base rules

------------------------------*/

* {
	-webkit-box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html, body {
	height: 100%;
}

body {
	font-family: 'SourceSansProRegular';
	font-size: 0.9em;
	color: $foreground-color;
	background-color: $primary-bg-color;
	-webkit-user-select: none;
	overflow: hidden;
}

main {
	display: -webkit-flex;
	height: 100%;
	overflow: hidden;
}

ul {
	list-style: none;
}

input[type="text"] {
	font-family: inherit;
	font-size: 0.8em;
	line-height: inherit;
}

p {
	margin-bottom: 1.1em;
}

/*------------------------------

    Helper classes

------------------------------*/

.center {
	text-align: center;
}

.hidden {
	display: none;
}

/*------------------------------
    Font Awesome icons
------------------------------*/

.fa {
	display: inline-block;
	font-family: "FontAwesome";
	font-style: normal;
	font-weight: normal;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.fa-trash-o:before {
	content: "\f014";
}

.fa-plus:before {
	content: "\f067";
}

.fa-chevron-right:before {
	content: "\f054";
}

/*------------------------------

    Menu view

------------------------------*/

nav ul li {
	cursor: default;
	display: inline-block;
	padding: 13px 10px 9px;
	font-size: 0.9em;

	&:hover { background: $base-green; }
	&:active { background: $base-green-lighter; }
}

/*------------------------------

    Domains list

------------------------------*/

.menu-icon {
	font-size: 1em;
	position: absolute;
	right: 10px;
	top: 10px;
}

.menu-item {
	color: #CCC;
	cursor: default;
	line-height: 1em;
	padding: 10px;
	position: relative;
	white-space: nowrap;
	-webkit-transition: padding-left 0.3s ease-in-out;

	&:hover, &.selected {
		color: #FFF;
		font-family: "SourceSansProSemiboldItalic";
		padding-left: 1em;
	}

	&:hover { background: $base-blue; }
	&.selected { background: $primary-bg-color; }
}

#domains-view {
	background: $secondary-bg-color;
	position: relative;
	-webkit-flex: 1;
	height: 100%;
	max-width: 300px;

	ul {
		height: -webkit-calc(100% - 38px);
		overflow-y: auto;
	}
}

/*------------------------------

    Main view

------------------------------*/

#main-view {
	-webkit-flex: 2;
	overflow-y: auto;

	& > div:first-child {
		position: relative;
	}
}

/*------------------------------

    Section title

------------------------------*/

h2 {
	padding: 15px 24px 13px;
	background: hsl(214, 30%, 34%);
	position: relative;
	z-index: -1;
}

.edit h2 { background: $base-blue; }
.new h2 { background: $base-green; }

/*------------------------------

    Domain form

------------------------------*/

form {
	padding: 20px 24px;
	font-size: 1.2em;

	input, label {
		display: block;
	}

	label {
		margin-top: 20px;

		&:first-child { margin-top: 0; }
	}

	input {
		margin-top: 7px;
		padding: 6px;
		width: 100%;
	}

	input[type="submit"] {
		font-weight: bold;
		margin-top: 26px;
		width: 100px;
		padding: 10px;
		background: $base-blue;
		color: $foreground-color;
		border: none;

		&:hover { background: $base-blue-light; }
		&:active { background: $base-blue-lighter; }
	}
}

.new form input[type="submit"] {
	background: $base-green;

	&:hover { background: $base-green-light; }
	&:active { background: $base-green-lighter; }
}

/*------------------------------

    New domain button

------------------------------*/

#new {
	position: absolute;
	top: 11px;
	right: 11px;
	color: #FFF;
	cursor: default;
	padding: 8px 13px;
	text-transform: capitalize;

	&:hover { background: $base-blue-light; }
	&:active { background: $base-blue-lighter; }

	.fa-plus:before { font-size: 0.9em; }
}

/*------------------------------

    Domain delete button

------------------------------*/

#delete {
	display: inline-block;
	position: absolute;
	bottom: 20px;
	right: 16px;
	padding: 10px 8px 8px 8px;
	cursor: default;
	color: gray;

	&:hover {
		color: #FFF;
	}

	&:active { background: $secondary-bg-color; }
}

/*------------------------------

    Status messages

	TODO: Finish messages interface

------------------------------*/

#messages {
	position: absolute;
	bottom: 0;
	right: 0;

	text-align: right;
}

.fade-in {
	-webkit-animation: fade-in .5s ease-out;
}

.fade-out {
	-webkit-animation: fade-in .5s ease-out reverse;
}

